--- a/.gitignore
+++ b/.gitignore
@@ -240,7 +240,7 @@ csx/
 ecf/
 rcf/
 
-# Windows Store app package directories and files
+# Windows Store js package directories and files
 AppPackages/
 BundleArtifacts/
 Package.StoreAssociation.xml
