--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "class-transformer": "^0.4.0",
+    "es6-shim": "^0.35.6",
     "hbs": "^4.1.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
