--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
+    "build:css": "postcss public/css/tailwind.css -o public/css/tailwind.min.css",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -30,6 +31,7 @@
     "hbs": "^4.1.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
+    "postcss-cli": "^8.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -45,7 +47,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.3.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -53,7 +55,7 @@
     "postcss": "^8.3.0",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
-    "tailwindcss": "^2.1.4",
+    "tailwindcss": "^2.2.4",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
